# passwordmanager

./: .gitignore  pyproject.toml
passwordmanager/: password_manager.py
